# Candidate-Pool-Management

./: Makefile  README.md  api.py  create_data_dir.sh  index.html  main.py  package-lock.json  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
src/: App.jsx  batch_processor.py  config.py  crud.py  cv_parser.py  database.py  db_utils.py  file_parser.py  models.py  prompts.py  utils.py
src/backend/: config.py  database.py  db_utils.py  file_parser.py  main.py  prompts.py
src/backend/similarity_engine/: base_similarity_metric.py  certification_similarity.py  data_models.py  experience_similarity.py  semantic_similarity.py  seniority_similarity.py
src/components/: CandidateList.jsx  DashboardHeader.jsx  DashboardLayout.jsx  DashboardSidebar.jsx  DashboardSidebarDividerItem.jsx  EmployeeCreate.jsx  EmployeeEdit.jsx  EmployeeList.jsx  EmployeeShow.jsx  JobList.jsx
src/data/: perfect_candidate_pool.db
src/frontend/: package-lock.json  package.json
src/frontend/data/: candidates.js  jobs.js  matching.js
src/frontend/src/backend/: api.py  batch_processor.py  utils.py
src/frontend/src/components/: CandidateCreate.jsx  CandidateEdit.jsx  CandidateForm.jsx  CandidateList.jsx  CandidateShow.jsx  DashboardLayout.jsx  (+4 more)
src/similarity_engine/: base_similarity_metric.py  certification_similarity.py  data_models.py  education_similarity.py  experience_similarity.py  language_similarity.py  semantic_similarity.py  seniority_similarity.py  similarity_engine.py  skills_similarity.py
src/theme/customizations/: dataGrid.jsx  datePickers.jsx  formInput.js  sidebar.jsx
(+9 files in other folders)
